--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.7",
+    "@react-navigation/native": "^6.1.3",
+    "@react-navigation/native-stack": "^6.9.9",
     "@solana-mobile/mobile-wallet-adapter-protocol": "^1.0.0",
     "@solana-mobile/mobile-wallet-adapter-protocol-web3js": "^1.0.0",
     "@solana/wallet-adapter-base": "^0.9.17",
@@ -22,6 +24,9 @@
     "react-native-get-random-values": "^1.8.0",
     "react-native-paper": "^5.0.0-rc.5",
     "react-native-reanimated": "^2.14.4",
+    "react-native-safe-area-context": "^4.5.0",
+    "react-native-screens": "^3.19.0",
+    "react-native-svg": "^13.8.0",
     "react-native-url-polyfill": "^1.3.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-vision-camera": "^2.15.4",
